# potts-model-monte-carlo

./: README.md  gui.py  main.py  metropolis.py  pyproject.toml
potts_model_mc/: config.py  field.py  gui.py  helper.py  interaction.py  magn_temp_plot.py  main.py  metropolis.py  output_helper.py  typing_helper.py
potts_model_mc/test/: test_metropolis.py
preliminary_studies/: prelim.ipynb
